# nonebot_plugin_setu_collection

./: README.md  __init__.py  pyproject.toml  utils.py
api/: Anosu.py  Lolicon.py  MirlKoi.py
clovers_setu_collection/: __init__.py  a.py  utils.py
clovers_setu_collection/api/: Anosu.py  MirlKoi.py
nonebot_plugin_setu_collection/: __init__.py  config.py
nonebot_plugin_setu_collection/api/: Anosu.py
