[tool.poetry]
name = "nonebot_plugin_setu_collection"
version = "0.2.1"
description = ""
authors = ["KarisAya <1048827424@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
clovers = "^0.3.0"
nonebot-plugin-clovers = {extras = ["onebot"], version = "^0.2.0"}
clovers-setu-collection = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
