[project]
name = "nonebot-plugin-setu-collection"
version = "0.3.2"
description = ""
authors = [{ name = "KarisAya", email = "1048827424@qq.com" }]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "clovers (>=0.3.4,<0.4.0)",
    "nonebot-plugin-clovers[onebot] (>=0.2.3,<0.3.0)",
    "clovers-setu-collection (>=0.2.0,<0.3.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
